--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -283,6 +283,7 @@ test_sources = \
 	signature.cpp					\
 	simple.abc						\
 	simple.asciidoc					\
+	simple.au3						\
 	simple.bas						\
 	simple.conf						\
 	simple.d						\
